np arange reshape ndim shape size

--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -14,6 +14,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "[ 2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "[ 2  4  6  8 10 12 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy arange\n",
+    "\n",
+    "# gives 1d array \n",
+    "a = np.arange(15)\n",
+    "print(a)\n",
+    "\n",
+    "a = np.arange(2,15)\n",
+    "print(a)\n",
+    "\n",
+    "a = np.arange(2,15,2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy reshape\n",
+    "\n",
+    "# converts 1d array to given provided array\n",
+    "# (row * column)\n",
+    "a = np.arange(15).reshape(3, 5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array is \n",
+      "\n",
+      " [[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]]\n",
+      "\n",
+      " [[ 8  9 10 11]\n",
+      "  [12 13 14 15]]] \n",
+      "\n",
+      "shape of array is (2, 2, 4)\n",
+      "dimension of array is 3\n",
+      "size of array is 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(16).reshape(2, 2, 4)\n",
+    "print(\"array is \\n\\n {} \\n\".format(a))\n",
+    "\n",
+    "# get shape of an array\n",
+    "print(\"shape of array is {}\".format(a.shape))\n",
+    "\n",
+    "# get dimension of an array\n",
+    "print(\"dimension of array is {}\".format(a.ndim))\n",
+    "\n",
+    "# get size of elements of an array\n",
+    "print(\"size of array is {}\".format(a.size))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
