--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -347,28 +347,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'from_function'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-12158b406b4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_func\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'from_function'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[  0.,   1.,   4.],\n",
+       "        [  1.,   2.,   5.],\n",
+       "        [  4.,   5.,   8.]],\n",
+       "\n",
+       "       [[  1.,   2.,   5.],\n",
+       "        [  2.,   3.,   6.],\n",
+       "        [  5.,   6.,   9.]],\n",
+       "\n",
+       "       [[  4.,   5.,   8.],\n",
+       "        [  5.,   6.,   9.],\n",
+       "        [  8.,   9.,  12.]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def my_func(a,b,c):\n",
     "    return a*a + b*b + c*c\n",
     "\n",
-    "np.from_function(my_func,(3,3,3))"
+    "np.fromfunction(my_func,(3,3,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22 33 44 55]\n",
+      "[18 27 36 45]\n",
+      "[ 40  90 160 250]\n",
+      "[10 10 10 10]\n",
+      "[      400     27000   2560000 312500000]\n",
+      "[ 9.12945251 -9.88031624  7.4511316  -2.62374854]\n",
+      "[False False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array( [20,30,40,50] )\n",
+    "b = np.array( [2,3,4,5] )\n",
+    "\n",
+    "# addition\n",
+    "c = a + b\n",
+    "print(c)\n",
+    "\n",
+    "# sub\n",
+    "c = a - b\n",
+    "print(c)\n",
+    "\n",
+    "# mul\n",
+    "c = a * b\n",
+    "print(c)\n",
+    "\n",
+    "# div\n",
+    "c = a / b\n",
+    "print(c)\n",
+    "\n",
+    "# power\n",
+    "c = a ** b\n",
+    "print(c)\n",
+    "\n",
+    "# sin\n",
+    "c = np.sin(a) * 10\n",
+    "print(c)\n",
+    "\n",
+    "# boolean compare\n",
+    "c = a < b\n",
+    "print(c)\n",
+    "\n"
    ]
   }
  ],
