numpy basic operations

--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -438,9 +438,17 @@
     "\n",
     "# boolean compare\n",
     "c = a < b\n",
-    "print(c)\n",
-    "\n"
+    "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
