numpy matrix multiplication

--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -432,10 +432,6 @@
     "c = a ** b\n",
     "print(c)\n",
     "\n",
-    "# sin\n",
-    "c = np.sin(a) * 10\n",
-    "print(c)\n",
-    "\n",
     "# boolean compare\n",
     "c = a < b\n",
     "print(c)"
@@ -443,12 +439,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 9.12945251 -9.88031624  7.4511316  -2.62374854]\n",
+      "[  4.85165195e+08   1.06864746e+13   2.35385267e+17   5.18470553e+21]\n",
+      "[ 44.72135955  54.77225575  63.2455532   70.71067812]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array( [20,30,40,50] )\n",
+    "\n",
+    "# sin\n",
+    "c = np.sin(a) * 10\n",
+    "print(c)\n",
+    "\n",
+    "# exp\n",
+    "c = np.exp(a) \n",
+    "print(c)\n",
+    "\n",
+    "# sqrt\n",
+    "c = np.sqrt(a) * 10\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 0]\n",
+      " [0 4]]\n",
+      "[[5 4]\n",
+      " [3 4]]\n",
+      "[[5 4]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy matrix multiplication\n",
+    "\n",
+    "A = np.array( [[1,1],[0,1]] )\n",
+    "B = np.array( [[2,0],[3,4]] )\n",
+    "\n",
+    "# elemetn wise product\n",
+    "print(A*B)\n",
+    "\n",
+    "# dot product (matrix multiplicarion)\n",
+    "print(A.dot(B))\n",
+    "print(np.dot(A,B))"
+   ]
   }
  ],
  "metadata": {
