Indexing, Slicing and Iterating

--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -471,6 +471,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## numpy matrix multiplication"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
@@ -491,8 +498,6 @@
     }
    ],
    "source": [
-    "# numpy matrix multiplication\n",
-    "\n",
     "A = np.array( [[1,1],[0,1]] )\n",
     "B = np.array( [[2,0],[3,4]] )\n",
     "\n",
@@ -502,6 +507,153 @@
     "# dot product (matrix multiplicarion)\n",
     "print(A.dot(B))\n",
     "print(np.dot(A,B))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing, Slicing and Iterating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0   1   8  27  64 125 216 343 512 729]\n",
+      "8\n",
+      "[ 8 27 64]\n",
+      "[  8  64 216 512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1d\n",
+    "\n",
+    "a = np.arange(10)**3\n",
+    "print(a)\n",
+    "\n",
+    "# acces element at specific index\n",
+    "print(a[2])\n",
+    "\n",
+    "# access elements within range\n",
+    "print(a[2:5])\n",
+    "\n",
+    "# access elements within range\n",
+    "print(a[2:9:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [10 11 12 13]\n",
+      " [20 21 22 23]\n",
+      " [30 31 32 33]\n",
+      " [40 41 42 43]]\n",
+      "23\n",
+      "[ 0 10 20 30 40]\n",
+      "[[ 0  1]\n",
+      " [10 11]\n",
+      " [20 21]\n",
+      " [30 31]\n",
+      " [40 41]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nd\n",
+    "\n",
+    "def f(x,y):\n",
+    "    return 10*x+y\n",
+    "\n",
+    "b = np.fromfunction(f,(5,4),dtype=int)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "# access specific element\n",
+    "print(b[2,3])\n",
+    "\n",
+    "print(b[0:5, 0])\n",
+    "\n",
+    "print(b[0:5, 0:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n",
+      "[10 11 12 13]\n",
+      "[20 21 22 23]\n",
+      "[30 31 32 33]\n",
+      "[40 41 42 43]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x,y):\n",
+    "    return 10*x+y\n",
+    "\n",
+    "b = np.fromfunction(f,(5,4),dtype=int)\n",
+    "\n",
+    "# Iterating over multidimensional arrays is done with respect to the first axis:\n",
+    "for row in b:\n",
+    "    print(row)\n",
+    "    \n",
+    "# However, if one wants to perform an operation on each element in the array, \n",
+    "# one can use the flat attribute which is an iterator over all the elements of the array:\n",
+    "for element in b.flat:\n",
+    "    print(element)"
    ]
   }
  ],
