--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -655,6 +655,52 @@
     "for element in b.flat:\n",
     "    print(element)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## array reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9.  0.  9.  6.]\n",
+      " [ 9.  6.  4.  9.]\n",
+      " [ 1.  1.  4.  8.]]\n",
+      "[[ 9.  0.]\n",
+      " [ 9.  6.]\n",
+      " [ 9.  6.]\n",
+      " [ 4.  9.]\n",
+      " [ 1.  1.]\n",
+      " [ 4.  8.]]\n",
+      "[[ 9.  9.  9.  4.  1.  4.]\n",
+      " [ 0.  6.  6.  9.  1.  8.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.floor(10*np.random.random((3,4)))\n",
+    "print(a)\n",
+    "\n",
+    "# reshape\n",
+    "a = a.reshape(6,2)\n",
+    "print(a)\n",
+    "\n",
+    "# transpose\n",
+    "a = a.T\n",
+    "print(a)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
