--- a/numpy_cook_book.ipynb
+++ b/numpy_cook_book.ipynb
@@ -698,7 +698,43 @@
     "\n",
     "# transpose\n",
     "a = a.T\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing with Arrays of Indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0   1   4   9  16  25  36  49  64  81 100 121]\n",
+      "[ 1  1  9 64 25]\n",
+      "[[ 9 16]\n",
+      " [81 49]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(12)**2\n",
     "print(a)\n",
+    "\n",
+    "i = np.array( [ 1,1,3,8,5 ] )\n",
+    "print(a[i])\n",
+    "\n",
+    "j = np.array( [ [ 3, 4], [ 9, 7 ] ] )\n",
+    "print(a[j])\n",
     "\n"
    ]
   }
