pandas dataframe create

--- a/pandas_cook_book.ipynb
+++ b/pandas_cook_book.ipynb
@@ -165,17 +165,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DataFrame"
+    "## DataFrame\n",
+    "- DataFrame is a 2-dimensional labeled data structure with columns of potentially different types.\n",
+    "- You can think of it like a spreadsheet or SQL table, or a dict of Series objects.\n",
+    "- we can create pandas from \n",
+    "    - From dict of Series\n",
+    "    - From dict of dict\n",
+    "    - From dict of ndarrays / lists\n",
+    "    - From structured or record array\n",
+    "    - From a list of dicts\n",
+    "    - From a dict of tuples\n",
+    "    - "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'two': a    1.0\n",
+      "b    2.0\n",
+      "c    3.0\n",
+      "d    4.0\n",
+      "dtype: float64, 'one': a    1.0\n",
+      "b    2.0\n",
+      "c    3.0\n",
+      "dtype: float64}\n",
+      "   one  two\n",
+      "a  1.0  1.0\n",
+      "b  2.0  2.0\n",
+      "c  3.0  3.0\n",
+      "d  NaN  4.0\n",
+      "   one  two\n",
+      "d  NaN  4.0\n",
+      "b  2.0  2.0\n",
+      "a  1.0  1.0\n",
+      "   two three\n",
+      "d  4.0   NaN\n",
+      "b  2.0   NaN\n",
+      "a  1.0   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create dict of series\n",
+    "\n",
+    "d = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']),\n",
+    "     'two' : pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "# convert dict to df\n",
+    "df = pd.DataFrame(d)\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "# choose specific index\n",
+    "df = pd.DataFrame(d, index=['d', 'b', 'a'])\n",
+    "print(df)\n",
+    "\n",
+    "# choose specific columns\n",
+    "df = pd.DataFrame(d, index=['d', 'b', 'a'], columns=['two', 'three'])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'a', u'b', u'c', u'd'], dtype='object')\n",
+      "Index([u'one', u'two'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']),\n",
+    "     'two' : pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "\n",
+    "print(df.index)\n",
+    "print(df.columns)"
+   ]
   }
  ],
  "metadata": {
