Column selection, addition, deletion

--- a/pandas_cook_book.ipynb
+++ b/pandas_cook_book.ipynb
@@ -260,6 +260,62 @@
     "print(df.index)\n",
     "print(df.columns)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Column selection, addition, deletion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1.0\n",
+      "b    2.0\n",
+      "c    3.0\n",
+      "d    4.0\n",
+      "Name: two, dtype: float64\n",
+      "2.0\n",
+      "   one  two  three\n",
+      "a  1.0  1.0    1.0\n",
+      "b  2.0  2.0    4.0\n",
+      "c  3.0  3.0    9.0\n",
+      "d  NaN  4.0    NaN\n",
+      "   one  three\n",
+      "a  1.0    1.0\n",
+      "b  2.0    4.0\n",
+      "c  3.0    9.0\n",
+      "d  NaN    NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']),\n",
+    "     'two' : pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "\n",
+    "# column selection\n",
+    "print(df['two'])\n",
+    "print(df['two']['b'])\n",
+    "\n",
+    "# column addition\n",
+    "df['three'] = df['one'] * df['two']\n",
+    "print(df)\n",
+    "\n",
+    "# deleting column\n",
+    "del df['two']\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
